[package]
name = "macpepdb"
version = "0.1.0"
authors = ["Dirk Winkelhardt <dirk.winkelhardt@rub.de>"] 
edition = "2021"
readme = "Readme.md"
description = "Large peptide database for mass spectrometry"
repository = "https://github.com/medbioinf/macpepdb"
homepage = "https://github.com/medbioinf/macpepdb"
documentation = "https://github.com/medbioinf/macpepdb"
license-file = "LICENSE"

build = "build.rs"

[lib]
name = "macpepdb"
path = "src/lib.rs"

[[bin]]
name = "macpepdb"
path = "src/bin.rs"

# [[bin]]
# name = "macpepdb_performance"
# path = "src/bin_performance.rs"

[dependencies]
anyhow = "~1.0.69"
async-stream = "0.3.5"
axum = { version = "0.7.2", features = ["json"] }
axum-streams = { version = "0.15", features = ["json", "csv", "text"] }
base64 = "0.22.1"
bitvec = "1.0.1"
chrono = "0.4.23"
clap = { version = "4.3.0", features = ["derive"] }
crossbeam-queue = "0.3.11"
csv = "1.2.2"
dihardts_cstools = "~1.0.0"
dihardts_omicstools = "~3.1.0"
env_logger = "0.10.0"
fallible-iterator = "0.3.0"
fancy-regex = "0.11.0"
flate2 = "1.0.28"
futures = "0.3.28"
glob = "0.3.1"
http = "1.0.0"
indicatif = "0.17.6"
indicium = "0.6.0"
itertools = "0.14.0"
lazy_static = "1.4.0"
log = "0.4.17"
metrics = "0.24.1"
metrics-exporter-prometheus = { version = "0.16.1", features = ["http-listener"] }
metrics-util = "0.19.0"
murmur3 = "0.5.2"
openssl = "0.10.60"
prometheus-parse = "0.2.5"
rand = "0.8.5"
refinery = { version = "0.8.7", features = ["tokio-postgres"] }
reqwest = { version = "0.11.22", features = ["json", "stream"] }
scylla = { version = "1.1.0", features = ["metrics"] }
serde = "1.0.160"
serde_json = "1.0.95"
sysinfo = "0.28.2"
tokio = { version = "1.44.2", features = ["full"] }
tokio-util = "0.7.14"
tower = "0.4.13"
tower-http = { version = "0.5.0", features = ["cors", "trace"] }
tracing = "0.1.37"
tracing-appender = "0.2.3"
tracing-indicatif = "0.3.4"
tracing-loki = "0.2.6"
tracing-subscriber =  { version = "0.3.17", features = ["env-filter"]}
tracing-test = "0.2.4"
urlencoding = "2.1.3"

[dev-dependencies]
lipsum = "0.9.0"
openssl = "0.10.60"
reqwest = { version = "0.11.22" }
serial_test = "*"

[build-dependencies]
dihardts_omicstools = "~3.1.0"
