[package]
name = "macpepdb"
version = "1.1.1"
authors = ["Dirk Winkelhardt <dirk.winkelhardt@rub.de>"] 
edition = "2021"
readme = "README.md"
description = "Large peptide database for mass spectrometry"
repository = "https://github.com/medbioinf/macpepdb"
homepage = "https://github.com/medbioinf/macpepdb"
documentation = "https://github.com/medbioinf/macpepdb"
license-file = "LICENSE"

build = "build.rs"

exclude = [
    "*docker-compose.*",
    "/docker",
    "/.github",
    "/test_files",
    "Makefile",
    "rust-toolchain.toml",
    ".dockerignore",
    "/.vscode",
]

[lib]
name = "macpepdb"
path = "src/lib.rs"

[[bin]]
name = "macpepdb"
path = "src/bin.rs"

# [[bin]]
# name = "macpepdb_performance"
# path = "src/bin_performance.rs"

[dependencies]
anyhow = "~1.0.69"
async-stream = "0.3.6"
axum = { version = "0.8.5", features = ["json"] }
axum-streams = { version = "0.23.1", features = ["json", "csv", "text"] }
base64 = "0.22.1"
chrono = "0.4.23"
clap = { version = "4.3.0", features = ["derive"] }
crossbeam-queue = "0.3.11"
csv = "1.2.2"
dihardts_cstools = "~2.2.0"
dihardts_omicstools = "~3.1.0"
fallible-iterator = "0.3.0"
fancy-regex = "0.11.0"
flate2 = "1.0.28"
futures = "0.3.31"
glob = "0.3.1"
http = "1.0.0"
indicatif = "0.17.6"
indicium = "0.6.0"
itertools = "0.14.0"
lazy_static = "1.4.0"
metrics = "0.24.2"
metrics-exporter-prometheus = { version = "0.17.2", features = ["http-listener"] }
prometheus-parse = "0.2.5"
rand = "0.8.5"
reqwest = { version = "0.11.22", features = ["json", "stream"] }
rustyms = "0.10.0"
scylla = { version = "1.3.1", features = ["metrics"] }
serde = "1.0.160"
serde_json = "1.0.95"
sysinfo = "0.28.2"
thiserror = "2.0.12"
tokio = { version = "1.47.1", features = ["full"] }
tokio-util = "0.7.16"
tower-http = { version = "0.6.6", features = ["cors", "trace"] }
tracing = "0.1.37"
tracing-appender = "0.2.3"
tracing-indicatif = "0.3.4"
tracing-loki = "0.2.6"
tracing-subscriber =  { version = "0.3.17", features = ["env-filter"]}
tracing-test = "0.2.4"
urlencoding = "2.1.3"

[dev-dependencies]
lipsum = "0.9.0"
openssl = "0.10.60"
reqwest = { version = "0.11.22" }
serial_test = "3.2.0"

[build-dependencies]
dihardts_omicstools = "~3.1.0"
